--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
-django==1.11
-mysqlclient==1.3.13
-django_adminlte2==0.3.0
+amqp==2.3.2
+billiard==3.5.0.4
 celery==4.2.0
+certifi==2018.4.16
+chardet==3.0.4
+Django==1.11
+django-adminlte2==0.4.1
 django-celery-results==1.0.1
+idna==2.7
+kombu==4.2.1
+mysqlclient==1.3.13
+pkg-resources==0.0.0
+pytz==2018.5
+requests==2.19.1
+urllib3==1.23
 vero==2.0.1
+vine==1.1.4
