--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
 amqp==2.3.2
-billiard==3.5.0.4
+astroid==1.6.5
+billiard==3.5.0.3
 celery==4.2.0
+celery-progress==0.0.3
 certifi==2018.4.16
 chardet==3.0.4
 Django==1.11
-django-adminlte2==0.4.1
+django-adminlte2==0.3.0
 django-celery-results==1.0.1
+get==1.0.3
 idna==2.7
+isort==4.3.4
 kombu==4.2.1
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 mysqlclient==1.3.13
 pkg-resources==0.0.0
+post==1.0.2
+public==1.0.3
+pylint==1.9.2
 pytz==2018.5
+query-string==1.0.2
+request==1.0.2
 requests==2.19.1
+six==1.11.0
 urllib3==1.23
 vero==2.0.1
 vine==1.1.4
+wrapt==1.10.11
